frontend/style/_pets.scss
.pet-name-pattern-edit {
    font-size: 1.1rem;
    width: 100%;
    border-radius: 0.4em;
    line-height: 1.5;
    box-sizing: border-box;
    background-color: darken($color: $background-color, $amount: 5);
    padding-left: 0.4rem;
    padding-right: 0.4rem;
    border-width: 1px;
    color: lighten($color: lime, $amount: 10);
    margin-bottom: 10px;
}

.pettable {
    display: grid;
    grid-template-columns: 1fr 1fr;
    row-gap: 5px;

    div {
        background-color: lighten(blue, 10);
        overflow-x: scroll;
    }

    div:nth-child(2n) {
        border-top-right-radius: 0.4em;
        border-bottom-right-radius: 0.4em;
    }

    div:nth-child(2n+1) {
        border-top-left-radius: 0.4em;
        border-bottom-left-radius: 0.4em;
    }

    div:nth-child(4n),
    div:nth-child(4n-1) {
        background-color: lighten($color: blue, $amount: 20);
    }

    div:nth-child(1),
    div:nth-child(2) {
        background-color: rgba($color: #000000, $alpha: 0);
        font-size: 1.25em;
    }

    div {
        padding: 12px;
        padding-left: 10px;
        padding-right: 10px;
    }
}

